@@ -18,6 +18,7 @@ Changes for 1.3.4.1
 -Fixed an unexpected ability of Peach to spin-jump from off vines and on pressing of the ALT-JUMP while the JUMP key is held
 -Fixed the GFX shaking of the upside down piranha plants when they got customized in some cases
 -NPC freezing sound got an individual sound instead of the shell hit
+-Frozen NPC breaking got an individual sound
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
